--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -12,7 +12,7 @@ jobs:
 
     name: Synchronize Wiki
     runs-on: ubuntu-latest
-    if: github.repository == 'Slimefun/Wiki'
+    if: github.repository == 'xMikux/Wiki'
 
     steps:
     - name: Checking out Repository
@@ -21,10 +21,10 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '10.x'
-    - name: Scanning for dead links
-      run: node src/missing.js
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+    #- name: Scanning for dead links
+    #  run: node src/missing.js
+    #  env:
+    #    ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
     - name: Syncing
       run: sh src/sync.sh
       env:
