--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /pages/*.md
-    translation: /pages-%two_letters_code%/%original_file_name%
+    translation: /pages-%locale_with_underscore%/%original_file_name%
