--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,5 @@
 files:
   - source: /translate/en/Overview/*.md
     translation: /translate/%two_letters_code%/Overview/%original_file_name%
+  - source: /translate/en/Overview/*.json
+    translation: /translate/%two_letters_code%/Overview/%original_file_name%
