Revert "chore: change"
This reverts commit 113a88cef31f12838d4dca498210bed3384dca66.

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,7 +3,7 @@ files:
     translation: /translate/%two_letters_code%/Overview/%original_file_name%
   - source: /translate/en/Overview/*.json
     translation: /translate/%two_letters_code%/Overview/%original_file_name%
-  - source: /translate/en/Basic-Machines/*.md
-    translation: /translate/%two_letters_code%/Basic-Machines/%original_file_name%
-  - source: /translate/en/Basic-Machines/*.json
-    translation: /translate/%two_letters_code%/Basic-Machines/%original_file_name%
+  - source: /translate/en/Other-Plugins/**/*.md
+    translation: /translate/%two_letters_code%/Other-Plugins/**/%original_file_name%
+  - source: /translate/en/Other-Plugins/**/*.json
+    translation: /translate/%two_letters_code%/Other-Plugins/**/%original_file_name%
