Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,5 +1,5 @@
 files:
-  - source: /translate/en/Overview/*
-    translation: /translate/%two_letters_code%/Overview/%original_file_name%
-  - source: /translate/en/Other-Plugins/**/*
-    translation: /translate/%two_letters_code%/Other-Plugins/**/%original_file_name%
+  - source: /translate/en/**/*
+    ignore:
+      - /translate/en/missing.md
+    translation: /translate/%two_letters_code%/**/%original_file_name%
