chore: Update Sync CI

--- a/.github/workflows/Page-Sync.yml
+++ b/.github/workflows/Page-Sync.yml
@@ -1,4 +1,4 @@
-name: Page Sync
+name: Main Wiki Page Sync
 
 on:
   workflow_dispatch: {}
@@ -6,14 +6,14 @@ on:
     branches:
     - master
     paths:
-    - 'pages/**'
+    - 'translate/tw/**'
 
 jobs:
   sync:
     name: Synchronize Wiki Pages
     runs-on: ubuntu-latest
     if: |
-      github.repository == 'SlimeTraditionalTranslation/Wiki' &&
+      github.repository == 'SlimeTraditionalTranslation/Slimefun-Main-Wiki' &&
       contains(github.event.head_commit.message, '[ci skip]') == false
     steps:
     - name: Checking out Repository
