ci: add auto sync

--- a/.github/workflows/Page-Sync.yml
+++ b/.github/workflows/Page-Sync.yml
@@ -2,11 +2,15 @@ name: Main Wiki Page Sync
 
 on:
   workflow_dispatch: {}
-  push:
-    branches:
-    - master
-    paths:
-    - 'translate/tw/**'
+  workflow_run:
+    workflows: ["AutoSquash"]
+    types:
+      - completed
+  # push:
+  #   branches:
+  #   - master
+  #   paths:
+  #   - 'translate/tw/**'
 
 jobs:
   sync:
